# pie

./: .env.example  .gitignore  GEMINI.md  package.json
server/: .env.exmaple  Cargo.toml
server/src/: auth.rs  error.rs  main.rs  redis.rs
server/src/comms/: mod.rs  store.rs
server/src/comms/web_socket/: connection.rs  message.rs  mod.rs  room.rs
server/src/comms/web_socket/protocol/: auth.rs  create.rs  ice.rs  join.rs  mod.rs  offer.rs  verify.rs
server/src/comms/webrtc/: candidate.rs  mod.rs  peer.rs
server/src/store/: client_map.rs  metadata_map.rs  mod.rs  room_map.rs
server/src/webscoket/: events.rs  handler.rs  mod.rs  utils.rs
server/src/webscoket/event_handlers/: join.rs  mod.rs  participants.rs
supabase/: config.toml
supabase/migrations/: 20251112121725_create_space.sql
supabase/schemas/: space.sql
web/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/(product)/: layout.tsx
web/app/(product)/lobby/: page.tsx
web/app/api/create-room/: route.ts
web/app/api/log/: route.ts
web/app/auth/callback/: route.ts
web/app/lobby/: layout.tsx  page.tsx
web/app/login/: layout.tsx  page.tsx
web/app/r/[code]/: page.tsx
web/components/auth/: auth-button.tsx  auth.context.tsx  sign-in-form.tsx
web/components/space/: space.tsx
web/contexts/: auth.context.tsx  socket.context.tsx
web/lib/: logger.ts
web/lib/errors/: index.ts
web/lib/supabase/: client.ts  middleware.ts  server.ts
web/modules/meet/components/: meeting.tsx
(+4 files in other folders)
