[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
chrono = "0.4.42"
dashmap = { version = "6.1.0", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
nanoid = "0.4.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
supabase-jwt = "0.1.1"
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
webrtc = "0.14.0"
